Add work_with_* folders to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,8 @@ cython_debug/
 .pypirc
 
 .DS_Store
+
+# Ignored files/data in lesson 13
+lesson_13/work_with_csv/
+lesson_13/work_with_json/
+lesson_13/work_with_xml/
