--- a/Docker_compose.yaml
+++ b/Docker_compose.yaml
@@ -1,21 +1,14 @@
 version: '3.8'
 
 services:
-  selenium:
-    image: selenium/standalone-firefox:latest
-    container_name: selenium-firefox
-    ports:
-      - "4444:4444"
-    shm_size: 2gb  # покращує стабільність для Firefox
-
-  tests:
-    build: .
-    container_name: pytest-runner
-    depends_on:
-      - selenium
+  db:
+    image: postgres:14-alpine
     environment:
-      - SELENIUM_URL=http://selenium:4444/wd/hub
-    volumes:
-      - .:/app
-    working_dir: /app
-    command: pytest -v /app/lesson_28
+      POSTGRES_DB: test_db
+      POSTGRES_USER: test_user
+      POSTGRES_PASSWORD: test_password
+
+  app:
+    build: .
+    depends_on:
+      - db
