--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -5,6 +5,6 @@ USER root
 # Встановлюємо Python 3 і pip
 RUN apt update && \
     apt install -y python3 python3-pip  && \
-    apt install python3.11-venv
+    apt install -y python3.11-venv
 
 USER jenkins
