--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -2,9 +2,13 @@ FROM jenkins/jenkins:lts
 
 USER root
 
-# Встановлюємо Python 3 і pip
-RUN apt update && \
-    apt install -y python3 python3-pip  && \
-    apt install python3.11-venv
+# Встановлюємо Docker CLI (docker.io або docker-ce)
+RUN apt-get update && \
+    apt-get install -y docker.io docker-compose python3 python3-venv python3-pip && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# Додаємо користувача Jenkins до групи docker, щоб він міг виконувати docker-команди
+RUN usermod -aG docker jenkins
+
+# Переходимо назад до користувача Jenkins
 USER jenkins
