--- a/Docker_compose2.yaml
+++ b/Docker_compose2.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.jenkins
-    container_name: jenkins
+    container_name: jenkins_homework
     ports:
       - "8080:8080"
       - "50000:50000"
