--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -2,9 +2,9 @@ FROM jenkins/jenkins:lts
 
 USER root
 
-# Встановлюємо Python 3 і pip
-RUN apt update && \
-    apt install -y python3 python3-pip  && \
-    apt install python3.11-venv
+# Встановлюємо Python 3, pip та venv
+RUN apt-get update && \
+    apt-get install -y python3 python3-pip python3-venv git curl && \
+    apt-get clean
 
 USER jenkins
